# samples

./: README.md
AgentController/: AgentController.cpp  AgentController2.cpp  AgentWorld.xml  AgentWorld2.xml  Makefile
AgentController/KinectV2/: README.md  kinectController.cpp  kinectWorld.xml
AgentController/KinectV2/KinectV2/: KinectApp.cpp  KinectApp.h  KinectV2.vcxproj  main.cpp
AgentController/OculusRift/: OculusRiftCtrl.cpp
Bastien/CleanUpWithMove/: .gitignore  CleanUpTest.xml  CleanUpTest2.xml  Makefile  README  Wagon.cpp  cleanUpRobot.cpp  cleanUpUser.cpp  demo2.sh
Bastien/FollowMeWithMove/: Camera.cpp  CheckPoint.cpp  CheckPoint.x3d  CheckPoint.xml  CheckPoint2.cpp  FinishLine.cpp  Floor_A.x3d  Floor_A.xml  Floor_B.xml  FollowMeDemo.xml  FollowMeHuman.cpp  FollowMeTestRobot.cpp  ITP1.cpp  ITP2.cpp  L_Wall.x3d  L_Wall.xml  M_Wall.x3d  M_Wall.xml  Makefile  Man_02.xml  Moderator.cpp  Operator.cpp  PSMoveData.h  Pointer.x3d  Pointer.xml  README  Referee.cpp  S_Wall.x3d  S_Wall.xml  S_Wall_EV.x3d  S_Wall_EV.xml  Wall.cpp  Wall.x3d  Wall.xml  Wall_EV.x3d  Wall_EV.xml  man_02.x3d  motion.txt  node.txt  readme.txt  (+1 more)
CleanUpHumanInteraction/: CleanUpTest.xml  Makefile  README  TrashBox.cpp  cleanUpRobot.cpp  cleanUpUser.cpp  cleanUpUser2.cpp  demo.sh
JointAttention/: JointAttention.xml  JointAttention2.xml  JointAttention3.xml  Makefile  demo.sh  demo3.sh  partner.cpp  partner2.cpp  point_record.cpp  user.cpp  user2.cpp  user3.cpp
KinectV2/:  readme.txt
KinectV2/KinectV2/: ComPtr.h  KinectApp.cpp  KinectApp.h  KinectV2.vcxproj  KinectV2.vcxproj.filters  Logger.cpp  Logger.h  MyService.cpp  MyService.h  linekage.cpp  linkage.h  linkage_service.h  main.cpp
KinectV2/KinectV2/Release/SIGNiUse.85EB710A.tlog/: CL.read.1.tlog  CL.write.1.tlog  SIGNiUserTracker_KinectV2.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
KinectV2/Release/: SIGNiUserTracker.ini  SIGNiUserTracker_KinectV2.bat  videofile.avi
KinectV2/include/: BodyBasics.h  SIGService.h  SgvSocket.h  ViewImage.h  XnPlatform.h  XnTypes.h  binary.h
Kinem_Sig_Ros/: CMakeLists.txt  package.xml
Kinem_Sig_Ros/include/: Controller.h  ControllerImpl.h  ControllerInf.h  JointForce.h  Logger.h  Parts.h  Position.h  RawSound.h  SimObjBaseAttrs.h
Kinem_Sig_Ros/msg/: Init_Pos.msg  Robot_Joint.msg
Kinem_Sig_Ros/src/: Arm_Control1.cpp  Sig_app_kinem.cpp
LeapMotionSample/: ControllerSample.cpp  Makefile  leftHand.x3d  leftHand.xml  rightHand.x3d  rightHand.xml  world.xml
MultiUser_Demo/Modified Services/Kinect/: SIGNiUserTracker_2008.vcproj  SceneDrawer.cpp  main.cpp
MultiUser_Demo/Modified Services/Kinect/Win32Debug/: BuildLog.htm  OpenNI.res  SIGNiUserTracker.ilk  SIGNiUserTracker.sig  mt.dep  vc90.idb
MultiUser_Demo/Modified Services/OculusRiftSensor/ViewerService/: OculusRiftSensor.cpp
MultiUser_Demo/ModifiedServices/Kinect/: SceneDrawer.h
MultiUser_Demo/MultiUser/: Camera.cpp  Makefile  Man-nii-v2_green.xml  Man-nii-v2_pink.xml  Man-nii-v2_red.xml  MultiUser.xml  MultiUserCtr.cpp  MultiUserCtr.x3d  cleanUpUser.cpp  cleanUpUser2.cpp  man_nii_v2.x3d  man_nii_v2_green.x3d  man_nii_v2_pink.x3d  man_nii_v2_red.x3d  seMultiUserCtr.xml
MultiUser_Demo/MultiUserPlugin/: .gitignore  MultiUsersInterface_vs2010.sln
MultiUser_Demo/MultiUserPlugin/MultiUser/: AssemblyInfo.cpp  Form1.h  MultiUser.vcxproj  MultiUser.vcxproj.filters  MultiUsers.cpp  MultiUsers.h  stdafx.cpp
MultiUser_Demo/MultiUserPlugin/MultiUser/Debug/: MultiUser.vcxproj.GenerateResource.Cache  MultiUser.vcxprojResolveAssemblyReference.cache  MultiUsersInterface.lastbuildstate
RobotControl/: Buffet.xml  ControlRobot.cpp  Couch_table.xml  Makefile  house_example.xml  wall_z.xml
Speech recognition using Julius/Speech_Recognition_Service/: takeIt.sig
Speech recognition using Julius/Speech_Recognition_Service/SIGVerseGrammar/: Sample.jconf
YoannDutel/: Bed.xml  Buffet.x3d  ControlRobot.cpp
iCub_Control/: Makefile  Robot.cpp  iCub.x3d  iCubInterface.sig  iCubWolrd.xml  iCub_Interface.sig
iCub_Control/iCub_Interface/: .gitignore  iCub_Interface_vs2010.sln
iCub_Control/iCub_Interface/iCubInterface/: AssemblyInfo.cpp  Form1.h  ReadMe.txt  iCubInterface.cpp  iCubInterface.h  iCubInterface.vcxproj  iCubInterface.vcxproj.filters
(+7 files in other folders)
